finished problem 1, cleaned up structure, restarted notebook to commit cleanly.

--- a/hw_3/hw_3.ipynb
+++ b/hw_3/hw_3.ipynb
@@ -33,12 +33,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instantiate Monty, give it a list of commands (which are themselves classes)"
+    "### Answer begins here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Hi! I'm Monty. For me to run, I need a file called creds.py to be present in this directory. This file needs to have three variables defined:**\n",
+    "\n",
+    " * email: the email address to send from and to\n",
+    " * pwd: the password (in the case of gmail, a Google App password)\n",
+    " * googlespeech: the full path to the service account file (JSON) for your Google speech account\n",
+    " \n",
+    "Once you've got this, run the cells below to get me set up! The bottom section of cells allows you to run an interactive session."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +74,7 @@
     "FORMAT = pyaudio.paInt16\n",
     "CHANNELS = 1\n",
     "RATE = 44100\n",
-    "RECORD_SECONDS = 5\n",
+    "RECORD_SECONDS = 10\n",
     "\n",
     "def record(WAVE_OUTPUT_FILENAME = \"new2.wav\", chunk = 1024, \n",
     "       FORMAT = pyaudio.paInt16, CHANNELS = 1, RATE = 44100, RECORD_SECONDS = 5):\n",
@@ -86,44 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* done recording\n"
-     ]
-    }
-   ],
-   "source": [
-    "record()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!ls -lat |head"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "!open new2.wav"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -157,26 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Transcript: Monte you send an email with subject Foo and body Buzz looks\n"
-     ]
-    }
-   ],
-   "source": [
-    "results = transcribe_file(WAVE_OUTPUT_FILENAME)\n",
-    "command = results[0].alternatives[0].transcript.lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import smtplib\n",
@@ -190,7 +150,7 @@
     "def mail(sender, pwd, to, subject, text, files=[]):\n",
     "    msg = MIMEMultipart()\n",
     "    msg[\"From\"] = sender\n",
-    "    msg[\"To\"] = COMMASPACE.join(to)\n",
+    "    msg[\"To\"] = to\n",
     "    msg[\"Date\"] = formatdate(localtime=True)\n",
     "    msg[\"Subject\"] = subject\n",
     "    msg.attach(MIMEText(text))\n",
@@ -211,21 +171,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from urllib.parse import urlencode\n",
+    "import bs4\n",
+    "import requests\n",
+    "\n",
     "def tell_joke():\n",
     "    \"\"\"Function that gets a joke off the internet and returns it.\"\"\"\n",
-    "    raise NotImplementedError(\"TODO\")\n",
+    "    req = requests.get(\"https://icanhazdadjoke.com/\")\n",
+    "    soup = bs4.BeautifulSoup(req.text, \"lxml\")\n",
+    "    print(soup.find(\"p\", class_=\"subtitle\").get_text())\n",
     "    \n",
     "def do_calculation(command):\n",
     "    \"\"\"Function that accepts a command to do math and returns the result.\n",
     "    \n",
     "    Probably just gonna throw the calculation at google and try to return whatever is in the calculator box.\"\"\"\n",
-    "    from urllib.parse import urlencode\n",
-    "    import bs4\n",
-    "    import requests\n",
     "    \n",
     "    words = command.split()\n",
     "    the_calculation = ' '.join(words[1:])\n",
@@ -272,40 +235,90 @@
     "    # rather than getting into natural language processing and other heavyweight approaches\n",
     "    if (words[0] == \"Monty\") or (words[0] == \"Monte\"):\n",
     "        command = ' '.join(words[1:]) # Strip this to leave just the command\n",
-    "        #print(\"Commands must begin by addresing Monty by name. For example: \\\"Monty, tell me a joke.\\\"\")\n",
     "    if \"email\" in command: # if we see the word email, assume we are to send one\n",
     "        # putting this first allows the email to contain the words \"calculate\" or \"tell me a joke\"...\n",
     "        print(\"Gonna send you an email, aw yiss.\")\n",
     "        send_email(command)\n",
     "    elif \"calculate\" in command:\n",
-    "        print(\"Gonna do some math, aw yiss.\")\n",
+    "        print(\"Gonna do some math:\")\n",
     "        do_calculation(command)\n",
     "    elif (\"tell\" in command and \"joke\" in command):\n",
-    "        print(\"Gonna tell you  a joke, aw yiss.\")\n",
+    "        print(\"Gonna tell you  a joke:\")\n",
     "        tell_joke()\n",
     "    else:\n",
     "        print(\"Didn't understand the command, sorry.\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gonna send you an email, aw yiss.\n",
-      "Received command\n",
-      "'monte you send an email with subject foo and body buzz looks'\n",
-      "So I will send an email with subject \n",
-      "Foo\n",
-      "and body \n",
-      "Buzz looks\n"
-     ]
-    }
-   ],
+   "source": [
+    "### Interactive session begins here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Record command (max 10 seconds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "record()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Play back command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!open new2.wav"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Transcribe command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = transcribe_file(WAVE_OUTPUT_FILENAME)\n",
+    "command = results[0].alternatives[0].transcript.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Act on command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "act(command)"
    ]
