completed problem 2 and added some notes and clarifications, then cleared the output. 5min to spare\!

--- a/hw_3/hw_3.ipynb
+++ b/hw_3/hw_3.ipynb
@@ -327,6 +327,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Final thoughts on this problem:\n",
+    "\n",
+    "This was fun! I wanted to re-engineer it to be class-based, but problem 2 sucked up too much time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 2) Write a program that identifies musical notes from sound (AIFF) files. \n",
     "\n",
     "  - Run it on the supplied sound files (12) and report your program’s results. \n",
@@ -347,29 +356,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Notes from office hours etc:\n",
     "Middle C = 440Hz, recorded as amplitude of some pressure wave. That gets turned into an analog signal which is used to move a speaker. We take the fourier transform and get the \"strength\" of each frequency. Really we want the power spectrum, which is the real part of the FFT. \n",
     "\n",
     "Dominant freq will have the highest amplitude for this problem. Harmonics will have less.\n",
-    " **Except for the half-harmonic, 220Hz**\n",
-    "\n"
+    " **Except for the half-harmonic, 220Hz?!**\n",
+    "\n",
+    "use scipy.io, aifc reader built into python, use some kind of dictionary lookup thing"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "use scipy.io, aifc reader built into python, use some kind of dictionary lookup thing"
+    "#### Answer begins here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well, this one took forever haha. First I got bogged down in the channels and endiannes issues involved in reading the data, then I tried a few different methods of getting the power spectrum and the major frequency. I thought I was almost done but the note lookup took some time as well! I ended up parsing an online table into Pandas.\n",
+    "\n",
+    "I've tried to clean up the notebook and condense cells and eliminate unnecessary print statements, so hopefully it's easy to follow."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test sound"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "!ls sound_files"
+    "!open sound_files/A4_PopOrgan.aif"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Begin code"
    ]
   },
   {
@@ -382,63 +416,20 @@
    "source": [
     "import aifc\n",
     "import os, sys\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if sys.byteorder == \"little\":\n",
-    "    dt = \"<i4\"\n",
-    "elif sys.byteorder == \"big\":\n",
-    "    dt = \">i4\"\n",
-    "else:\n",
-    "    raise Error(\"Can't figure out endianness\")"
+    "import numpy as np\n",
+    "from scipy.fftpack import fft, rfft, fftfreq\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.signal import periodogram\n",
+    "import glob\n",
+    "\n",
+    "% matplotlib inline"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Questions for Chelsea**\n",
-    "\n",
-    " * What do we do with the channels? If we really keep them separate, we need 2-byte chunks separated by 2 bytes, as each of the channels. How do we do this efficiently?\n",
-    " * Also, why is the code below not working? Something about dtypes?\n",
-    " * Once we have the separated channels, do we need to use them both? It should be possible to just analyze one\n",
-    " * Which FFT function is the most useful/direct to get the power spectrum? scipy.fftpack.fft?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soundfile = 'sound_files/A4_PopOrgan.aif'\n",
-    "with aifc.open(soundfile) as aiff:\n",
-    "    # what to do with channels?\n",
-    "    params = aiff.getparams()\n",
-    "    data = aiff.readframes(params.nframes)\n",
-    "    databytes = np.fromstring(data, dtype=np.short).byteswap()\n",
-    "    ch1_1 = databytes[0::4]\n",
-    "    ch1_2 = databytes[1::4]\n",
-    "    ch2_1 = databytes[2::4]\n",
-    "    ch2_2 = databytes[3::4]\n",
-    "    \n",
-    "    channel1 = np.zeros(int(len(databytes)/2))\n",
-    "    channel2 = np.zeros(int(len(databytes)/2))\n",
-    "    \n",
-    "    channel1[0::2] = ch1_1\n",
-    "    channel1[1::2] = ch1_2\n",
-    "    channel2[0::2] = ch2_1\n",
-    "    channel2[1::2] = ch2_2\n",
-    "    \n",
-    "    # we get params.sampwidth * params.nchannels bytes per frame, so chunks are sampwidth bytes\n",
-    "    # with sampwidth * (nchannels-1) bytes in between\n",
-    "    print(params, type(data), len(data), type(databytes), len(databytes), f\"{len(ints)/params.framerate} secs\", databytes[:100], sep=\"\\n\")"
+    "#### Tried both of these, results were identical"
    ]
   },
   {
@@ -448,7 +439,188 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_fundamental_np(signal, conversion=16):\n",
+    "    ps = np.abs(np.fft.rfft(signal))**2\n",
+    "    freqs = np.fft.fftfreq(ps.size, d=(1./44100))\n",
+    "    return np.argmax(ps)/conversion, plt.plot(freqs, ps)\n",
+    "\n",
+    "def get_fundamental_scipy(signal, conversion=16):\n",
+    "    f, p = periodogram(signal, 44100)\n",
+    "    return np.argmax(p)/conversion, plt.plot(f, p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This cell parses the data and analyzes channel1, as well as spitting out plots."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soundfiles = glob.glob(\"sound_files/*.aif\")\n",
+    "pitches = {}\n",
+    "for soundfile in soundfiles:\n",
+    "    with aifc.open(soundfile) as aiff:\n",
+    "        # what to do with channels?\n",
+    "        params = aiff.getparams()\n",
+    "        data = aiff.readframes(params.nframes)\n",
+    "        dt = np.int16 # this conflicts with the information provided in the problem\n",
+    "        # but results in channels of the appropriate length, i.e. 16sec\n",
+    "        databytes = np.fromstring(data, dtype=dt).byteswap()\n",
+    "        # how is there not a better way to do this?\n",
+    "        ch1_1 = databytes[0::4]\n",
+    "        ch1_2 = databytes[1::4]\n",
+    "        ch2_1 = databytes[2::4]\n",
+    "        ch2_2 = databytes[3::4]\n",
+    "\n",
+    "        channel1 = np.zeros(int(len(databytes)/2), dtype=dt)\n",
+    "        channel2 = np.zeros(int(len(databytes)/2), dtype=dt)\n",
+    "\n",
+    "        channel1[0::2] = ch1_1\n",
+    "        channel1[1::2] = ch1_2\n",
+    "        channel2[0::2] = ch2_1\n",
+    "        channel2[1::2] = ch2_2\n",
+    "\n",
+    "        # we get params.sampwidth * params.nchannels bytes per frame, so chunks are sampwidth bytes\n",
+    "        # with sampwidth * (nchannels-1) bytes in between\n",
+    "        #print(params)\n",
+    "        \n",
+    "        freq, plot = get_fundamental_scipy(channel1)\n",
+    "        pitches[soundfile] = freq\n",
+    "        \n",
+    "        plt.show(plot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** I decided to use the HTML table parser from here: http://srome.github.io/Parsing-HTML-Tables-in-Python-with-BeautifulSoup-and-pandas/ and then I modified it to fit the table found at http://www.liutaiomottola.com/formulae/freqtab.htm**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "class HTMLTableParser:\n",
+    "\n",
+    "    def parse_url(self, url):\n",
+    "        response = requests.get(url)\n",
+    "        soup = BeautifulSoup(response.text, 'lxml')\n",
+    "        return [(table,self.parse_html_table(table))\\\n",
+    "                for table in soup.find_all('table')]  \n",
+    "\n",
+    "    def parse_html_table(self, table):\n",
+    "        n_columns = 0\n",
+    "        n_rows=0\n",
+    "        column_names = []\n",
+    "\n",
+    "        # Find number of rows and columns\n",
+    "        # we also find the column titles if we can\n",
+    "        for i,row in enumerate(table.find_all('tr')):\n",
+    "            if i==0:\n",
+    "                # Handle column names\n",
+    "                th_tags = row.find_all('td') \n",
+    "                if len(th_tags) > 0 and len(column_names) == 0:\n",
+    "                    for th in th_tags:\n",
+    "                        column_names.append(th.get_text().strip())\n",
+    "                    \n",
+    "            else:\n",
+    "                # Determine the number of rows in the table\n",
+    "                td_tags = row.find_all('td')\n",
+    "                if len(td_tags) > 0:\n",
+    "                    n_rows+=1\n",
+    "                    if n_columns == 0:\n",
+    "                        # Set the number of columns for our table\n",
+    "                        n_columns = len(td_tags)\n",
+    "\n",
+    "            \n",
+    "\n",
+    "        # Safeguard on Column Titles\n",
+    "        if len(column_names) > 0 and len(column_names) != n_columns:\n",
+    "            raise Exception(\"Column titles do not match the number of columns\")\n",
+    "\n",
+    "        columns = column_names if len(column_names) > 0 else range(0,n_columns)\n",
+    "        df = pd.DataFrame(columns = columns,\n",
+    "                          index= range(0,n_rows))\n",
+    "        row_marker = -1\n",
+    "        for row in table.find_all('tr'):\n",
+    "            column_marker = 0\n",
+    "            columns = row.find_all('td')\n",
+    "            for column in columns:\n",
+    "                df.iat[row_marker,column_marker] = column.get_text().strip()\n",
+    "                column_marker += 1\n",
+    "            if len(columns) > 0:\n",
+    "                row_marker += 1\n",
+    "\n",
+    "        # Convert to float if possible\n",
+    "        for col in df:\n",
+    "            try:\n",
+    "                df[col] = df[col].astype(float)\n",
+    "            except ValueError:\n",
+    "                pass\n",
+    "\n",
+    "        return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Clean up and rearrange the data frame so we can look things up easily"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hp = HTMLTableParser()\n",
+    "parsed = hp.parse_url(\"http://www.liutaiomottola.com/formulae/freqtab.htm\")\n",
+    "\n",
+    "df = parsed[0][1]\n",
+    "df.rename(columns={'Frequency (Hz)':'freq', 'Note Name':'note'}, inplace=True)\n",
+    "# drop empty rows\n",
+    "df['note'].replace('', np.nan, inplace=True)\n",
+    "df.dropna(subset=['note'], inplace=True)\n",
+    "# interpret freq as a float\n",
+    "df['freq'] = df['freq'].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k, v in pitches.items():\n",
+    "    noteinfo = df.iloc[((df['freq']-v).abs().argsort()[0])][['note','Octave']]\n",
+    "    print(f\"{k} was identified as {v}Hz, which a lookup says is {noteinfo[0]}{noteinfo[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final thoughts on Problem 2:\n",
+    "\n",
+    "There were way too many unknowns, IMO. I know my solution is imperfect but it's pretty good for how rushed the middle and last parts of this problem were, due to issues with reading in the file. \n",
+    "\n",
+    "Also, the statement in the problem that the audio is 32-bit does not seem to be accurate (rather 2 16-bit channels, so yes 1 frame is 32 bits, but that doesn't mean you read in the audio as int32... [unless i did this whole problem wrong, lol])"
+   ]
   },
   {
    "cell_type": "code",
