--- a/hw_6/Homework 6.ipynb
+++ b/hw_6/Homework 6.ipynb
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [
     {
@@ -355,6 +355,21 @@
      "text": [
       "Will calculate 39 features for 4244 images.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=3,\n",
+       "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 494,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
