wrote model functions and split/apply/combine code. can now successfully fit the two-stage model to an individual's data in multiple conditions. two_stage_model.py contains the model code, utils.py contains the model_condition code that sets up the modeling of a condition. The notebook runs the modeling for one subject.

--- a/final_project/Fitting Two-Stage Model to Individual trial data.ipynb
+++ b/final_project/Fitting Two-Stage Model to Individual trial data.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
@@ -15,46 +13,11 @@
     "\n",
     "import lmfit as lf\n",
     "\n",
+    "from scipy.stats import norm\n",
+    "\n",
     "# functions written for this project\n",
-    "import utils"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You'll want the mat files and the struct: res.allData. Each row represents a trial. I never added a variable to label the headers so I describe them below. I bolded the variables you probably want to focus on. Hopefully you don't need to feed in the trials in the order they were presented to subjects but if so, you can figure it out with the other variables in the struct.\n",
-    "\n",
-    "\n",
-    "OS data:\n",
-    "\n",
-    " * Staircase number for a given test block (= file number)\n",
-    " * Eye (1=weaker eye, 2= fellow eye)\n",
-    " * Mask Orientation (0=parallel, 90=orthogonal)\n",
-    " * Binocular condition (1= monocular, 2=dichoptic)\n",
-    " * Mask Contrast (michelson)\n",
-    " * Trial number for this staircase\n",
-    " * Probe contrast recommended by staircase algorithm\n",
-    " * Response Accuracy (1=correct, 0=incorrect)\n",
-    " * Probe Contrast used (I don't remember it ever being different from #7 and was really just a sanity check)\n",
-    " * Interval that probe was presented in (1 or 2)\n",
-    " * File number (=test block)\n",
-    " \n",
-    "SS data:\n",
-    "\n",
-    " * Staircase number for a given test block (= file number)\n",
-    " * Eye (1=weaker eye, 2= fellow eye)\n",
-    " * Mask Orientation (0=parallel, 90=orthogonal)\n",
-    " * Binocular Condition (1= monocular, 2=dichoptic)\n",
-    " * Trial number for this staircase\n",
-    " * Contrast increment recommended by staircase algorithm\n",
-    " * Response Accuracy (1=correct, 0=incorrect)\n",
-    " * Mask Contrast  (michelson)\n",
-    " * Probe location (1-4, let me know if you need to know which number represents which quadrant)\n",
-    " * Response (1-4)\n",
-    " * Probe contrast increment used (I don't remember it ever being different from #6 and was really just a sanity check)\n",
-    " * File number (=test block)\n",
-    "\n"
+    "import utils\n",
+    "import two_stage_model as model"
    ]
   },
   {
@@ -94,7 +57,7 @@
    "outputs": [],
    "source": [
     "# sort in order trials were administered, ie block, staricase, trial\n",
-    "os_df.sort_values([\"FileNumber\", \"StaircaseNumber\", \"TrialNumberStaircase\"], inplace=True)\n"
+    "os_df.sort_values([\"FileNumber\", \"StaircaseNumber\", \"TrialNumberStaircase\"], inplace=True)"
    ]
   },
   {
@@ -114,14 +77,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os_df.head(n=20)"
+    "os_df.head(n=5)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "### Grouping"
+    "gvars = [\"Subject\", \"Eye\", \"Orientation\", \"Presentation\"] # Presentation conditions\n",
+    "gvars_mask = gvars + [\"MaskContrast\"] # Mask contrast, m in the model\n",
+    "gvars_masktarget = gvars_mask + [\"ProbeContrastUsed\"] # Target contrast, t in the model"
    ]
   },
   {
@@ -130,12 +99,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gvars = [\"Eye\", \"Orientation\", \"Presentation\"]\n",
-    "gvars_mask = gvars + [\"MaskContrast\"]\n",
-    "gvars_masktarget = gvars_mask + [\"ProbeContrastUsed\"]\n",
-    "grouped = os_df.groupby(gvars_masktarget)\n",
-    "for (gv, gr) in grouped:\n",
-    "    print(gv, len(gr))"
+    "grouped, condensed_df = utils.summarize_conditions(os_df, gvars_masktarget)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = condensed_df.reset_index()\n",
+    "df.head(n=12)"
    ]
   },
   {
@@ -152,7 +126,6 @@
     " * what are the parameters of the two-stage model, and which of those are going to be fixed and which are going to be free to vary, ie fit?\n",
     " * What is this normal integral d' to percent correct (P(c)) transformation?\n",
     "     * Phi(t) is the cdf of the normal distribution, tells you the probability that the normal variable is less than t\n",
-    "     * We actually dont use d-prime at all in the two-stage model (they use it for their noise model), so we can just stay in %-correct land\n",
     " * What is the proper equation for the likelihood of the parameters given m, t, n, and c?\n",
     " * What is the proper function for calculating percent correct from the model parameters?"
    ]
@@ -166,24 +139,42 @@
    "outputs": [],
    "source": [
     "params = lf.Parameters()\n",
+    "params.add('m', value=1.3, min=0.0, vary=False)\n",
+    "params.add('S', value=1, min=0.0, vary=False)\n",
     "params.add('w_m', value=1, min=0.0, vary=True)\n",
-    "params.add('w_d', value=0.0249, min=0.0, vary=True)\n",
+    "params.add('w_d', value=1, min=0.0, vary=True)\n",
     "params.add('a', value=0, vary=False)\n",
-    "params.add('k', value=0.2, vary=False)\n",
+    "params.add('k', value=0.2, min=0.0, max=1.0, vary=True)\n",
     "params.add('p', value=8, vary=False)\n",
     "params.add('q', value=6.5, vary=False)\n",
-    "params.add('Z', value=.0084, vary=False)"
+    "params.add('Z', value=.0085, vary=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "s.two_stage_fac_resp(params, [1], [0], [0], [1])"
+    "model.two_stage_response(params, [1], [0], [0], [0], [10], [5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.loglikelihood(11, 4, .5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(gvars).apply(utils.model_condition, model.two_stage_response, params)"
    ]
   },
   {
@@ -221,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ss_df[ss_df.Orientation==-1]"
+    "np.log(0)"
    ]
   },
   {
